src/css/style.css
body {
    background-color: #F1F2ED;
    margin: 0;
}

#title {
    text-align: center;
    font-size: 128px;
}

#customize-difficulty-message {
    text-align: center;
    font-size: 36px;
}

#game-customization {
    text-align: center;
    margin: 1% auto;
}

#start-button {
    display: block;
    margin: 0 auto;
}

.board-container {
    display: flex;
    flex-wrap: wrap;
    padding: 0;
    background-color: white;
    border: 4px solid black;
    box-sizing:border-box;
    aspect-ratio: 1/1;
    
    /* justify-self: center;
    align-self: center;
    width: max-content;
    max-width: none; */
}

.sqr {
    display: grid;
    background-color: white;
    width: 50px;
    height: 50px;
    flex: 0 0 50px;
    padding: 0;
    border: 2px solid black; 
    box-sizing: border-box;
    flex-shrink: 0;
    align-items: center;  
}

#start-screen {
    display: flex;          
    flex-direction: column; 
    align-items: center;    
    justify-content: center; 
    min-height: 100vh; 
}

#game-screen {
    display: none;          
    flex-direction: column; 
    align-items: center;    
    justify-content: center; 
    min-height: 100vh; 
}

#victory-screen {
    display: none;          
    flex-direction: column; 
    align-items: center;    
    justify-content: center; 
    min-height: 100vh; 
}

#game-over-screen {
    display: none;          
    flex-direction: column; 
    align-items: center;    
    justify-content: center; 
    min-height: 100vh; 
}

.nes-select {
    display: inline-block;
    width: auto;
    margin: 0 auto;
}

.nes-select select {
    display: inline-block;
    width: 560px;
    min-width: 40px;
}

.nes-btn {
    margin: 4 auto;
    padding: 0;
}

.start-button-div {
    margin: 16 auto;
    padding: 2;
}

#board-size-selector {
    margin: 8 auto;
    justify-content: center;
}

#tile-count-selector {
    margin: 8 auto;
    justify-content: center;
}

.restart-button {
    display: inline;
    margin: 16 auto;
}

.shuffle-button {
    display: inline;
    margin: 16 auto;
}

#score {
    display: inline-block;
    font-size: 20px;
}

#moves {
    font-size: 20px;
}

#victory {
    display: inline-block;
    font-size: 20px;
}

#game-screen-title {
    font-size: 40;
}

.letter1 {
    color:red;
    text-shadow: 8px 8px #8A8988;
}

.letter2 {
    color: green;
    text-shadow: 8px 8px #8A8988;
}

.letter3 {
    color:blue;
    text-shadow: 8px 8px #8A8988;
}

.letter4 {
    color:yellow;
    text-shadow: 8px 8px #8A8988;
}

.letter5 {
    color:purple;
    text-shadow: 8px 8px #8A8988;
}

.letter6 {
    text-shadow: 8px 8px #8A8988;
}

.letter7 {
    text-shadow: 8px 8px #8A8988;
}

